[project]
name = "chaostooling-oss"
version = "0.1.0"
description = "Monorepo for Chaos Toolkit extensions and tooling"
authors = [{name = "Morgan Wigge", email = "morgan@wigge.nu"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
    # Core
    "chaostoolkit-lib>=1.42.1",
    
    # DB Extension
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    "pyodbc>=4.0.39",
    "pymongo>=4.0.0",
    "redis>=4.5.0",
    "cassandra-driver>=3.28.0",
    "kafka-python>=2.0.2",
    "pika>=1.3.0",
    "stomp.py>=8.1.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",

    # Compute Extension
    # (psutil included above)

    # Reporting Extension
    "jinja2>=3.0.0",
    "weasyprint>=60.0",
    "pandas>=2.0.0",

    # OTEL Extension
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-semantic-conventions>=0.45b0",
    "opentelemetry-exporter-otlp>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=0.45b0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-instrumentation>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-instrumentation-requests>=0.45b0",
    "opentelemetry-instrumentation-urllib3>=0.45b0",
    "opentelemetry-propagator-b3>=1.24.0",
    "opentelemetry-propagator-jaeger>=1.24.0",
    "opentelemetry-exporter-gcp-trace>=1.6.0",
    "opentelemetry-resourcedetector-gcp>=1.6.0a0",
    "opentelemetry-propagator-gcp>=1.6.0",
    "opentelemetry-exporter-prometheus>=0.45b0",
    "opentelemetry-sdk-extension-aws>=2.0.1",
    "opentelemetry-propagator-aws-xray>=1.0.1",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.19.0",
    "black>=25.11.0",
    "ruff>=0.14.7",
    "isort",
    "bandit>=1.7.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = false
where = [
    "chaostooling-extension-db",
    "chaostooling-otel",
    "chaostooling-extension-compute",
    "chaostooling-extension-network",
    "chaostooling-extension-app",
    "chaostooling-reporting"
]

