[project]
name = "chaostoolkit-extension-compute"
version = "0.1.0"
description = "Chaos Toolkit extension for compute resource stress testing"
authors = [{name = "Morgan Wigge", email = "morgan@wigge.nu"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
    "chaostoolkit-lib>=1.42.1",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "black>=24.0.0",
    "ruff>=0.3.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chaoscompute*"]
