[project]
name = "chaostooling-extension-compute"
version = "0.1.0"
description = "Compute resource chaos engineering extensions for Chaos Toolkit"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Morgan Wigge", email = "morgan@wigge.nu"}
]
keywords = ["chaos-engineering", "chaos-toolkit", "compute", "cpu", "memory", "disk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
]

dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.19.0",
    "black>=25.11.0",
    "ruff>=0.14.7",
    "isort",
    "bandit>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chaoscompute"]

[tool.setuptools.package-data]
chaoscompute = ["py.typed"]
