[project]
name = "chaostooling-extension-db"
version = "1.0.0"
description = "Database and messaging system chaos engineering extensions for Chaos Toolkit"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Morgan Wigge", email = "morgan@wigge.nu"}
]
keywords = ["chaos-engineering", "chaos-toolkit", "database", "postgresql", "mysql", "mongodb", "redis", "kafka", "rabbitmq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]

dependencies = [
    "chaostooling-otel>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    "pyodbc>=4.0.39",
    "pymongo>=4.0.0",
    "redis>=4.5.0",
    "cassandra-driver>=3.28.0",
    "kafka-python>=2.0.2",
    "pika>=1.3.0",
    "stomp.py>=8.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.19.0",
    "black>=25.11.0",
    "ruff>=0.14.7",
    "isort",
    "bandit>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chaosdb"]

[tool.setuptools.package-data]
chaosdb = ["py.typed"]
