[project]
name = "chaostooling-otel"
version = "1.0.0"
description = "OpenTelemetry observability extensions for Chaos Toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Morgan Wigge", email = "morgan@wigge.nu"}
]
keywords = ["chaos-engineering", "chaos-toolkit", "opentelemetry", "observability", "tracing", "metrics", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-semantic-conventions>=0.45b0",
    "opentelemetry-exporter-otlp>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=0.45b0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-instrumentation>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-instrumentation-requests>=0.45b0",
    "opentelemetry-instrumentation-urllib3>=0.45b0",
    "opentelemetry-propagator-b3>=1.24.0",
    "opentelemetry-propagator-jaeger>=1.24.0",
    "opentelemetry-exporter-gcp-trace>=1.6.0",
    "opentelemetry-resourcedetector-gcp>=1.6.0a0",
    "opentelemetry-propagator-gcp>=1.6.0",
    "opentelemetry-exporter-prometheus>=0.45b0",
    "opentelemetry-sdk-extension-aws>=2.0.1",
    "opentelemetry-propagator-aws-xray>=1.0.1",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.19.0",
    "black>=25.11.0",
    "ruff>=0.14.7",
    "isort",
    "bandit>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chaosotel", "chaosotel.core", "chaosotel.probes"]

[tool.setuptools.package-data]
chaosotel = ["py.typed"]
