[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaostooling-reporting"
version = "0.1.0"
description = "Chaos Engineering reporting extension for Chaos Toolkit with automated report generation, data warehouse integration, and AI query capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Morgan Wigge", email = "morgan@wigge.nu"}
]
keywords = ["chaos-engineering", "chaostoolkit", "reporting", "analytics", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "chaostoolkit-lib>=1.0.0",
    "jinja2>=3.0.0",
    "weasyprint>=60.0",  # For PDF generation
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/chaostooling/chaostooling-reporting"
Documentation = "https://github.com/chaostooling/chaostooling-reporting/blob/main/README.md"
Repository = "https://github.com/chaostooling/chaostooling-reporting"
Issues = "https://github.com/chaostooling/chaostooling-reporting/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chaostooling_reporting*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

